# cv_projects

./: README.md  background_reduction_opencv.py  dnnImageClassifier.py  haar_cascade_FaceDetection.py  haar_cascade_ipad.py  haar_cascade_watch.py  hough_circle.py  ipad-cascade-10stages.xml  ipad-cascade-10stagesnew.xml  opencv_feature_matching.py
cpp/: README.md
cpp/colorDetection/: CMakeLists.txt
cpp/detectionAlgorithm/colorDetection/: colorDetection.cpp
cpp/detectionAlgorithm/gazeDetection/: multithreading.cpp
cpp/detectionAlgorithm/idGaze/: main.cpp
cpp/detectionAlgorithm/idGaze-face/: main.cpp
cpp/detectionAlgorithm/idGaze-objs/: CMakeLists.txt  main.cpp
cpp/detectionAlgorithm/objectDetection/multiObject/: CMakeLists.txt  multiobject.cpp  multithreading.cpp
cpp/detectionAlgorithm/objectDetection/singleObject/: CMakeLists.txt  redObjectDetection.cpp
cpp/detectionAlgorithm/scenarioDetection/: CMakeLists.txt  README.md  multithreading.cpp
cpp/haarClassifier/cpu/: CMakeLists.txt  howto.txt
cpp/haarClassifier/cpu/image/: facedetect.cpp
cpp/haarClassifier/cpu/video/: CMakeLists.txt  facedetect.cpp
cpp/haarClassifier/gpu/: CMakeLists.txt  cascadeclassifier.cpp  haarClassifierNuno.cpp  readme.txt
cpp/objectDetection/: redObjectDetection.cpp
cpp/videoCamera/: CMakeLists.txt
cpp/zmq/: CMakeLists.txt  april24down.txt  april24mid.txt  april24up.txt  april25b.txt  april25g.txt  april25r.txt  april4b.txt  april4g.txt  april4r.txt  april5b.txt  april5bI.txt  april5g.txt  april5gI.txt  april5r.txt  april5rI.txt  april9b.txt  april9g.txt  april9r.txt  example.txt  publisher.cpp  subscriber.cpp
deep/: Readme.md  deep_learning_object_detection.py  dnnImageClassifier.py
detectionAlgorithm/: center_of_shape.py  detect-icubPhoto.py  gazeBehaviouroff.py  test.py  videoFramePub.py
detectionAlgorithm/circlesDetection/: center_of_shape.py  circle_shape.py  houghCircle.py  hough_circle.py  main.py  mesh.py  shapeClassifier.py  shapeDetector.py
detectionAlgorithm/circlesDetection/offline/: circleDetector.py  findNearest.py  main.py
detectionAlgorithm/circlesDetection/online/: main.py
detectionAlgorithm/offlineVideo/: README.md  faceDetector.py  find_nearest.py  gazeBehaviour.py  main.py  offlineDetection.py
detectionAlgorithm/offlineVideo/hhi/: faceDetector.py
detectionAlgorithm/offlineVideo/icub/: balltracking.py  gazeBehaviour.py  main.py
detectionAlgorithm/onlineStream/icub/: faceDetector.py  gazeBehaviour.py  onlineDetection.py
haarCascade/: cascade-icub-30v30.xml  cascade-icub-60v60.xml  haar_cascade_FaceDetection.py  haar_cascade_iCub.py
haarClassifiers/: cascade-icub-40v40.xml  cascade-icub-50v50.xml  iCubFace_wEyes.py  icub_detectionHaar.py  icub_videodetectionHaar.py
python/: README.md
python/detectionAlgorithm/: README.md  main.cpp
python/detectionAlgorithm/circlesDetection/offline/: shapeCenter.py
python/detectionAlgorithm/offlineVideo/hhi/: README.md  gazeBehaviour.py  main.py  redBalltracking.py
python/detectionAlgorithm/offlineVideo/icub/: main.py
python/detectionAlgorithm/offlineVideo/icub/input/006/: export_info.csv  gaze_positions.csv  world_viz_timestamps.npy
python/detectionAlgorithm/offlineVideo/simple/: README.md  findNearest.py  gazeBehaviour.py  main.py  shapeDetector.py
python/detectionAlgorithm/offlineVideo/training-data/s1/: icub  icub_face1
python/detectionAlgorithm/onlineStream/icub/: ball_tracking.py
python/haarClassifiers/: face_eyes_icub_videodetectionHaar.py  icub_eyes_videodetectionHaar.py
python/haarClassifiers/gpu/: haarClassifierGPUpeople.cpp
shapeDetector/: README.md  center_of_shape.py  circle_shape.py  faceDetector.py  gazeBehaviour.py  gazeBehaviouroff.py  hough_circle.py  main.cpp  main.py  mesh.py  offlineDetection.py  onlineDetection.py  redBalltracking.py  shapeDetector.py  test.py
